# hkedengine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
dep/glfw/include/GLFW/: glfw3.h
dep/glm/include/glm/gtc/: matrix_transform.hpp
engine/: graphics.cpp  graphics.h  input.cpp  input.h  material.cpp  material.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  scene.cpp  scene.h  shader.h  ui.cpp  ui.h
engine/dep/: obj_loader.h  stb_image.h
resources/fonts/: helvetica.fnt
shaders/: quadf.glsl  simpleFragment.glsl  simpleVertex.glsl  simplef.glsl  simplev.glsl  std_bloomf.glsl  std_geomf.glsl  std_geomv.glsl  std_lightf.glsl  std_postf.glsl  std_uif.glsl  std_uiv.glsl  stdv.glsl
